# blog-codes

./: .gitignore  README.md
chatbot/: chatbot_tutorial.ipynb
ctr/: auc.py  ctr_data.py  ctr_data2.py  ctr_data3.py  preprocessor.py  sample.py  testctr.py  testctr2.py
dqn/: Atari_Breakout.py  Mountain_Car_Problem_QLearning.py
hmm-wfst/: HMM_FST.ipynb
mxgraphjava/: README  pom.xml
pg/: policy_gradient_pong.py
rl/: MC Prediction.ipynb  Off-Policy MC Control.ipynb  On-Policy MC Control.ipynb  Policy Evaluation.ipynb  Policy Iteration.ipynb  Q-Learning.ipynb  README.md  SARSA.ipynb  Value Iteration.ipynb  Windy Gridworld.ipynb  test.py
rl/envs/: blackjack.py  gridworld.py  windy_gridworld.py
rnn/: rnn.py
stanfordnlp/: pom.xml
stanfordnlp/src/main/java/com/fancyerii/blog/stanfordnlp/: ConstituentExample.java  CorefExample.java  CustomLemmaAnnotator.java  JavaClient.java  NERPipelineDemo.java  PTBTokenizerDemo.java  (+4 more)
stanfordnlp/src/main/resources/: basic_ner.rules  basic_ner.txt  basic_quote_extraction.rules  basic_quote_extraction.txt  basic_relation.rules  basic_relation.txt  custom-lemmas.txt  logback.xml  multi_step_ner.rules  multi_step_ner.txt
test-tesseract-cpp/: CMakeLists.txt  README.md  basic.cpp  basiccn.cpp  clsiter.cpp  getcomp.cpp  osd.cpp  worditer.cpp
test-tesseract-java/: pom.xml
test-tesseract-java/src/main/resources/: log4j.properties
testpdfbox/: pom.xml
testpdfbox/src/main/resources/: logback.xml
testpdfbox/src/test/java/com/github/fancyerii/: test
tf-keywords/: test.py  train.py
webdriver-wechat/: pom.xml
(+24 files in other folders)
